# mailflow

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.zh-CN.md  _typos.toml  clippy.toml  deny.toml
.github/workflows/: ci.yml
crates/mailflow-api/: Cargo.toml
crates/mailflow-api/src/: context.rs  error.rs  lib.rs  main.rs
crates/mailflow-api/src/api/: config.rs  health.rs  health_test.rs  logs.rs  metrics.rs  mod.rs  queues.rs  storage.rs  test.rs
crates/mailflow-api/src/auth/: jwt.rs  mod.rs
crates/mailflow-api/src/middleware/: logging.rs  metrics.rs  mod.rs
crates/mailflow-core/: Cargo.toml
crates/mailflow-core/src/: error.rs  lib.rs
crates/mailflow-core/src/email/: mime.rs
crates/mailflow-core/src/models/: config.rs  email.rs  events.rs  messages.rs  mod.rs
crates/mailflow-core/src/routing/: engine.rs  mod.rs
crates/mailflow-core/src/services/: config.rs  idempotency.rs  rate_limiter.rs  s3.rs  security.rs
crates/mailflow-core/src/utils/: file_validation.rs  logging.rs  mod.rs  retry.rs  sanitization.rs  validation.rs
crates/mailflow-worker/: Cargo.toml
crates/mailflow-worker/src/: lib.rs  main.rs
crates/mailflow-worker/src/handlers/: common.rs  inbound.rs  mod.rs  outbound.rs  ses.rs
crates/mailflow-worker/tests/: test_basic.rs  test_error_handling.rs  test_inbound_flow.rs  test_observability.rs  test_outbound_flow.rs  test_security.rs
crates/mailflow-worker/tests/common/: mod.rs  test_data.rs
crates/mailflow-worker/tests/fixtures/emails/: multi-recipient.eml  multipart.eml  threading-reply.eml  utf8-special-chars.eml  with_attachments.eml
crates/mailflow-worker/tests/fixtures/messages/: outbound-simple.json  outbound-with-attachment.json
dashboard/: package-lock.json  vite.config.ts
dashboard/src/pages/dashboard/: index.tsx
dashboard/src/pages/queues/: index.tsx
dashboard/src/pages/storage/: index.tsx
dashboard/src/pages/test/: index.tsx
dashboard/src/providers/: dataProvider.ts
docs/: ALL-PHASES-COMPLETE.md  API-DOCUMENTATION.md  COMPLETE-IMPLEMENTATION-SUMMARY.md  DEPLOYMENT.md  E2E_IMPLEMENTATION_SUMMARY.md  FINAL-DASHBOARD-COMPLETION.md  FINAL_SUMMARY.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION_COMPLETE.md  PHASE-1-2-IMPLEMENTATION.md  PHASE-3-4-IMPLEMENTATION.md  PHASE-4-COMPLETE.md  PHASE-5-6-IMPLEMENTATION.md  PRODUCTION-CHECKLIST.md  PROJECT-COMPLETE-SUMMARY.md  REVIEW.md  SECURITY.md  STATUS.md  TEST-MIGRATION-SUMMARY.md  TROUBLESHOOTING.md  USER-GUIDE.md
e2e/: .env.example  .gitignore  FINAL_TEST_SUMMARY.md  conftest.py  main.py  pyproject.toml  pytest.ini
e2e/tests/e2e/: __init__.py  test_e2e_attachments.py  test_e2e_error_recovery.py  test_e2e_inbound.py  test_e2e_multi_routing.py  test_e2e_outbound.py  test_e2e_performance.py  test_e2e_rate_limiting.py  test_e2e_roundtrip.py  test_e2e_security.py  test_e2e_size_limits.py
e2e/utils/: aws_helpers.py  email_builder.py  message_validator.py
infra/: .gitignore  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  package.json  tsconfig.json
infra/src/: api.ts  dashboard.ts  database.ts  iam.ts  index.ts  lambda.ts  monitoring.ts  queues.ts  ses.ts  storage.ts
specs/: .gitignore  0001-spec.md  0002-design.md  0003-implementation-plan.md  0005-integration-and-e2e-test-plan.md  0006-limit-source-domain.md  0007-dashboard.md  instructions.md
specs/fixes/: 0001-fix-email-issue.md  0002-attachment-metadata-parsing.md
specs/reviews/: 0001-system-review.md  0002-2nd-review.md  0003-dashboard-review.md
src/: constants.rs  lib.rs  main.rs
src/email/: attachment.rs  composer.rs  mod.rs  parser.rs
src/handlers/: common.rs  inbound.rs  mod.rs  outbound.rs  ses.rs
src/models/: config.rs
src/routing/: engine.rs  resolver.rs  rules.rs
src/services/: attachments.rs  config.rs  metrics.rs  mod.rs  security.rs  ses.rs  sqs.rs
src/utils/: logging.rs  sanitization.rs
tests/: test_error_handling.rs  test_inbound_flow.rs  test_observability.rs  test_outbound_flow.rs  test_security.rs
tests/common/: mock_aws.rs
tests/fixtures/emails/: html-inline-images.eml  simple.eml
