[workspace]
members = [
  "crates/mailflow-core",
  "crates/mailflow-worker",
  "crates/mailflow-api",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["Tyr Chen <tyr@acme.com>"]
edition = "2024"
rust-version = "1.89"
license = "MIT"
documentation = "https://docs.rs/mailflow"
repository = "https://github.com/tyrchen/mailflow"
homepage = "https://github.com/tyrchen/mailflow"

[workspace.dependencies]
# AWS SDK
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1.96"
aws-sdk-dynamodb = "1.97"
aws-sdk-s3 = "1.110"
aws-sdk-ses = "1.91"
aws-sdk-sqs = "1.88"
aws-sdk-cloudwatchlogs = "1.106"
aws-smithy-types = "1.3"

# Lambda Runtime
lambda_runtime = "0.14"
lambda_http = "0.17"
tokio = { version = "1.48.0", features = ["full"] }

# Web Framework (for API)
axum = "0.8"
tower = "0.5"
tower-http = "0.6"

# Email Processing
mail-parser = "0.11"
lettre = { version = "0.11", default-features = false, features = [
  "builder",
  "tokio1-rustls-tls",
] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error Handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
bytes = "1.10"
mime = "0.3"
base64 = "0.22"
url = "2.5"
async-trait = "0.1"
futures = "0.3"
lazy_static = "1.5"
rand = "0.8"
uuid = { version = "1.18", features = ["v4"] }

# Security
ammonia = "4.1"
typed-builder = "0.23.0"
md-5 = "0.10"
jsonwebtoken = "9.3"

# HTTP
http = "1.3"
http-body = "1.0"
http-body-util = "0.1"

tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Better optimization
strip = true      # Strip symbols
panic = "abort"   # Smaller binary
