[package]
name = "mailflow-core"
description = "Shared core library for Mailflow email dispatching system"
readme = "README.md"
categories = ["email", "web-programming"]
keywords = ["email", "aws", "lambda", "ses", "sqs"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# AWS SDK
aws-config = { workspace = true }
aws-sdk-cloudwatch = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-ses = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-sdk-cloudwatchlogs = { workspace = true }
aws-smithy-types = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Email Processing
mail-parser = { workspace = true }
lettre = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
chrono = { workspace = true }
regex = { workspace = true }
bytes = { workspace = true }
mime = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }

# Security
ammonia = { workspace = true }
typed-builder = { workspace = true }
md-5 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
